c4prj1_deck/grade.txt
Grading at Sun Mar 31 20:12:37 UTC 2019
Compiling deck.c -> deck.o
deck.c: In function ‘build_remaining_deck’:
deck.c:93:21: error: lvalue required as left operand of assignment
   make_deck_exclude = make_deck_exclude(excluded_cards);
                     ^
deck.c:94:10: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
   return make_deck_exclude;
          ^
cc1: all warnings being treated as errors
Compilation of deck.c failed

Overall Grade: F
